--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,6 @@
 <ion-app>
+  <h3>hello word !!!</h3>
+  <!--
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
@@ -26,4 +28,5 @@
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
+-->
 </ion-app>
