--- a/app/src/app/login/login.page.html
+++ b/app/src/app/login/login.page.html
@@ -4,6 +4,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <ion-list>
+    <ion-item>
+      <ion-label position="floating">Username</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-button fill="solid" expand="block" color="dark" click="login()">login</ion-button>
 
 </ion-content>
