--- a/app/src/app/login/login.page.html
+++ b/app/src/app/login/login.page.html
@@ -10,7 +10,7 @@
       <ion-label position="floating">Username</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
-    ion-item>
+    <ion-item>
       <ion-label position="floating">Password</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item>
