--- a/app/src/app/login/login.page.html
+++ b/app/src/app/login/login.page.html
@@ -12,7 +12,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" [(ngModel)]='password'></ion-input>
     </ion-item>
   </ion-list>
   <ion-button fill="solid" expand="block" color="dark" click="login()">login</ion-button>
