set exception definition

--- a/app/src/app/login/login.page.html
+++ b/app/src/app/login/login.page.html
@@ -15,6 +15,6 @@
       <ion-input type="password" [(ngModel)]='password'></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button fill="solid" expand="block" color="dark" click="login()">login</ion-button>
+  <ion-button fill="solid" expand="block" color="dark" (click)="login()">login</ion-button>
 
 </ion-content>
