--- a/app/src/app/register/register.page.html
+++ b/app/src/app/register/register.page.html
@@ -18,6 +18,6 @@
       <ion-input type="password" [(ngModel)]='cpassword'></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button fill="solid" expand="block" color="dark" (click)="login()">Singup</ion-button>
+  <ion-button fill="solid" expand="block" color="dark" (click)="register()">Singup</ion-button>
 
 </ion-content>
