set html content

--- a/app/src/app/uploader/uploader.page.html
+++ b/app/src/app/uploader/uploader.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>uploader</ion-title>
+    <ion-title>Uploader</ion-title>
   </ion-toolbar>
 </ion-header>
 
