--- a/app/src/app/tabs/tabs.page.html
+++ b/app/src/app/tabs/tabs.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tabs</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
 
-<ion-content>
+     </ion-tab-bar slot="botton">
 
-</ion-content>
+                <ion-tab-button tab="tab3">
+                        <ion-icon name=send></ion-icon>
+                        <ion-label>tab x</ion-label>
+                </ion-tab-button>   
+                
+                <ion-tab-button tab="tab3">
+                    <ion-icon name=send></ion-icon>
+                    <ion-label>tab x</ion-label>
+                </ion-tab-button>      
+                
+               <ion-tab-button tab="tab3">
+                    <ion-icon name=send></ion-icon>
+                    <ion-label>tab x</ion-label>
+               </ion-tab-button>      
+
+
+    </ion-tab-bar>
+
+</ion-tabs>
